--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<jaxb.version>2.3.0</jaxb.version>
 		<gson.version>2.8.0</gson.version>
 		<easymock.version>3.4</easymock.version>
+		<compiler.version>3.2</compiler.version>
 	</properties>
 
 	<dependencies>
@@ -90,6 +91,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${compiler.version}</version>
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
