--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,11 @@
 		<jaxb.version>2.3.0</jaxb.version>
 		<gson.version>2.8.0</gson.version>
 		<easymock.version>3.5.1</easymock.version>
-		<compiler.version>3.2</compiler.version>
+		<jarplugin.version>3.1.0</jarplugin.version>
+		<compiler.version>3.8.0</compiler.version>
+		<surfire.version>2.19.1</surfire.version>
+		<assembly.version>3.1.1</assembly.version>
+		<jetty.version>9.4.14.v20181114</jetty.version>
 	</properties>
 
 	<dependencies>
@@ -84,26 +88,69 @@
 			<version>${easymock.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- easymock -->
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-jmx</artifactId>
+			<version>${jetty.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${compiler.version}</version>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${jarplugin.version}</version>
 				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
+					<finalName>MoneyTransfer</finalName>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>it.micheledichio.revolut.moneytransfers.App</mainClass>
+							<classpathPrefix>dependency-jars/</classpathPrefix>
+						</manifest>
+					</archive>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${compiler.version}</version>
 				<configuration>
-			        <testFailureIgnore>true</testFailureIgnore>
-			    </configuration>
+					<release>${jdk.version}</release>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<finalName>MoneyTransfer</finalName>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+							<archive>
+								<manifest>
+									<mainClass>it.micheledichio.revolut.moneytransfers.App</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${surfire.version}</version>
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
